--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=hackathon
-spring.data.mongodb.uri=mongodb+srv://hackathonagi:usuario@hackathonagi.ro39nzd.mongodb.net/hackathonagi?retryWrites=true&w=majority&appName=hackathonagi
+spring.data.mongodb.uri=mongodb+srv://usuario:usuario@hackathonagi.ro39nzd.mongodb.net/hackathonagi?retryWrites=true&w=majority&appName=hackathonagi
